--- a/venue/templates/venue_details.html
+++ b/venue/templates/venue_details.html
@@ -17,7 +17,7 @@
             <span class="font-semibold leading-tight">{{ venue.name }}</span>
         </nav>
 
-        <h1 class="text-gray-600 text-4xl sm:text-5xl font-bold leading-tight opacity-0 animate-[fadeIn_0.6s_ease-out_0.1s_forwards]">
+        <h1 class="text-white text-4xl sm:text-5xl font-bold leading-tight opacity-0 animate-[fadeIn_0.6s_ease-out_0.1s_forwards] drop-shadow-md mb-4">
             {{ venue.name }}
         </h1>
     </div>
