--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,8 +8,8 @@
         </a>
 
         <div class="hidden items-center gap-5 md:flex">
-            <a href="{% url 'venue:venue_main' %}" class="nav-link text-base text-white/80 hover:text-white transition-colors duration-300">Booking</a> 
-            <a href="#event" class="nav-link text-base text-white/80 hover:text-white transition-colors duration-300">Event</a> {# Ganti href jika perlu #}
+            <a href="{% url 'venue:venue_main' %}" class="nav-link text-base text-white/80 hover:text-white transition-colors duration-300">Venue</a> 
+            <a href="#event" class="nav-link text-base text-white/80 hover:text-white transition-colors duration-300">Event</a>
         </div>
 
         <div class="hidden md:flex items-center gap-4">
@@ -41,9 +41,9 @@
         
     </div>
 
-    <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200 shadow-lg"> {# Background putih saat dibuka #}
+    <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200 shadow-lg">
         <div class="px-4 py-4 space-y-3">
-            <a href="{% url 'venue:venue_main' %}" class="block py-2 text-base text-gray-700 hover:text-[#000456] hover:bg-gray-50  px-3">Booking</a>
+            <a href="{% url 'venue:venue_main' %}" class="block py-2 text-base text-gray-700 hover:text-[#000456] hover:bg-gray-50  px-3">Venue</a>
             <a href="#event" class="block py-2 text-base text-gray-700 hover:text-[#000456] hover:bg-gray-50  px-3">Event</a>
             
             <div class="border-t border-gray-200 pt-4 mt-4">
