--- a/venue/templates/venue_main.html
+++ b/venue/templates/venue_main.html
@@ -269,7 +269,7 @@
                 <div class='flex gap-2'>
                     <button type='button' 
                             title='Edit venue'
-                            class='inline-flex items-center justify-center w-10 h-10 border border-blue-600 text-blue-600 hover:bg-blue-600 hover:text-white transition-colors duration-300 edit-btn' 
+                            class='inline-flex items-center justify-center w-10 h-10 border border-Light-Navy text-Light-Navy hover:bg-Light-Navy hover:text-white transition-colors duration-300 edit-btn' 
                             data-id='${venue.id}' data-name='${venue.name}'>
                         <svg class="w-4 h-4 pointer-events-none" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path>
@@ -277,7 +277,7 @@
                     </button>
                     <button type='button' 
                             title='Delete venue'
-                            class='inline-flex items-center justify-center w-10 h-10 border border-red-600 text-red-600 hover:bg-red-600 hover:text-white transition-colors duration-300 delete-btn' 
+                            class='inline-flex items-center justify-center w-10 h-10 border border-Orange text-Orange hover:bg-Sunrise-Orange hover:text-white transition-colors duration-300 delete-btn' 
                             data-id='${venue.id}' data-name='${venue.name}'>
                         <svg class="w-4 h-4 pointer-events-none" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path>
@@ -334,7 +334,7 @@
                     <div class="flex-1 flex justify-start items-end gap-1">
                         <div>
                             <span class="text-gray-900 text-2xl font-bold leading-loose">${priceFormatted}</span>
-                            <span class="text-gray-700 text-base font-normal leading-normal text-xs"> / sesi</span>
+                            <span class="text-gray-700 text-base font-normal leading-normal text-xs"> / jam</span>
                         </div>
                     </div>
 
