Update profile page to link to venue details and enhance test coverage for profile functionality

--- a/account/templates/profile_page.html
+++ b/account/templates/profile_page.html
@@ -269,7 +269,7 @@ function renderOwnerVenues(venuesData) {
                 </div>
                 <div class="flex justify-between items-end mt-auto">
                     <span class="text-gray-900 text-2xl font-bold">${priceFormatted}</span>
-                    <a href="#" class="px-5 py-2 bg-black text-Flash-White text-base font-normal hover:bg-Dark-Slate transition-colors">View More</a>
+                    <a href="/venue/detail/${v.id}/" class="px-5 py-2 bg-black text-Flash-White text-base font-normal hover:bg-Dark-Slate transition-colors">View More</a>
                 </div>
             </div>
         </article>
