--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -75,9 +75,11 @@
                 <div id="registerMessage" class="text-red-600 text-sm"></div>
 
                 <div class="w-full pt-4 sm:pt-6 flex flex-wrap justify-end items-start gap-3 sm:gap-4">
-                    <button type="button" class="px-4 sm:px-5 py-2 outline outline-1 outline-Color-Neutral-Darkest flex justify-center items-center gap-2 rounded-md">
+                    <button type="button" onclick="window.history.back()" 
+                        class="px-4 sm:px-5 py-2 outline outline-1 outline-Color-Neutral-Darkest flex justify-center items-center gap-2 rounded-md">
                         <div class="text-Color-Neutral-Darkest text-base font-normal font-['Roboto'] leading-normal">Back</div>
                     </button>
+
                     <button type="submit" class="px-4 sm:px-5 py-2 bg-black outline outline-1 outline-Color-Neutral-Darkest flex justify-center items-center gap-2 rounded-md">
                         <div class="text-white text-base font-normal font-['Roboto'] leading-normal">Create Account</div>
                     </button>
