Event detailed and join

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,7 +9,7 @@
 
         <div class="hidden items-center gap-5 md:flex">
             <a href="{% url 'venue:venue_main' %}" class="nav-link text-base text-white/80 hover:text-white transition-colors duration-300">Venue</a> 
-            <a href="#event" class="nav-link text-base text-white/80 hover:text-white transition-colors duration-300">Event</a>
+            <a href="{% url 'event:show_event' %}" class="nav-link text-base text-white/80 hover:text-white transition-colors duration-300">Event</a>
         </div>
 
         <div class="hidden md:flex items-center gap-4">
