--- a/event/templates/modal/delete_event.html
+++ b/event/templates/modal/delete_event.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!-- Delete Event Modal -->
-<div id="deleteEventModal" class="hidden fixed inset-0 bg-black/25 flex justify-center items-center z-[9999]">
+<div id="deleteEventModal" class="hidden fixed inset-0 bg-black/25 flex justify-center items-center z-80">
     <div class="p-10 relative bg-white flex flex-col justify-start items-center gap-8 rounded-2xl shadow-lg w-[500px]">
         <!-- Close Button -->
         <button class="absolute top-4 right-4 text-gray-700 hover:text-red-500 text-2xl font-bold transition-colors duration-300" onclick="hideModal('deleteEventModal')">✕</button>
