--- a/templates/footer.html
+++ b/templates/footer.html
@@ -18,7 +18,7 @@
                     </div>
 
                     <!-- Kanan: kolom link -->
-                    <div class="flex-1 flex flex-col md:flex-row md:gap-10 justify-start items-start">
+                    <div class="flex-1 flex flex-col md:flex-row gap-10 md:gap-10 justify-start items-start">
 
                         <!-- Kolom Perusahaan -->
                         <div class="flex-1 min-w-[150px] flex flex-col gap-4">
