--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -11,7 +11,7 @@
         <!-- NAVBAR -->
         <div class="w-full max-w-[1280px] max-h-20 flex flex-col justify-center items-center overflow-hidden">
             <div class="w-full flex flex-wrap justify-between items-center gap-4 sm:gap-8 overflow-hidden px-4 sm:px-0">
-                <div class="flex-1 flex justify-start items-start">
+                <div class="flex-1 flex justify-start items-start py-4">
                     <a href="/" id="brand-link" class="text-2xl font-bold text-white tracking-wide transition-colors duration-300">
                         AnyVenue
                     </a>
