--- a/templates/footer.html
+++ b/templates/footer.html
@@ -34,11 +34,11 @@
                         <div class="flex-1 min-w-[150px] flex flex-col gap-4">
                             <div class="text-black text-base font-semibold font-['Roboto'] leading-normal">Hubungi Kami</div>
                             <div class="flex flex-col justify-start items-start">
-                                <div class="py-2"><div class="text-black text-sm font-normal font-['Roboto'] leading-tight">Nabilla</div></div>
-                                <div class="py-2"><div class="text-black text-sm font-normal font-['Roboto'] leading-tight">Fakhri</div></div>
-                                <div class="py-2"><div class="text-black text-sm font-normal font-['Roboto'] leading-tight">Keisha</div></div>
-                                <div class="py-2"><div class="text-black text-sm font-normal font-['Roboto'] leading-tight">Naufal</div></div>
-                                <div class="py-2"><div class="text-black text-sm font-normal font-['Roboto'] leading-tight">Sahila</div></div>
+                                <div class="py-2"><a href="https://github.com/Nabillakha" class="text-black text-sm font-normal font-['Roboto'] leading-tight">Nabilla</a></div>
+                                <div class="py-2"><a href="https://github.com/FakhriHusainiRomza23" class="text-black text-sm font-normal font-['Roboto'] leading-tight">Fakhri</a></div>
+                                <div class="py-2"><a href="https://github.com/kurrorro" class="text-black text-sm font-normal font-['Roboto'] leading-tight">Keisha</a></div>
+                                <div class="py-2"><a href="https://github.com/NaufalFadliR" class="text-black text-sm font-normal font-['Roboto'] leading-tight">Naufal</a></div>
+                                <div class="py-2"><a href="https://github.com/sahilaathia" class="text-black text-sm font-normal font-['Roboto'] leading-tight">Sahila</a></div>
                             </div>
                         </div>
 
