--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -12,7 +12,7 @@
 {% include "sections/features_preview.html" %}
 
 <!-- Section 3: Booking Preview -->
-{% include "sections/booking_preview.html" %}
+{% include "sections/venue_preview.html" %}
 
 <!-- Section 4: Reviews Preview -->
 {% include "sections/reviews_preview.html" %}
