--- a/landing/templates/sections/events_preview.html
+++ b/landing/templates/sections/events_preview.html
@@ -1,9 +1,9 @@
 {% load static %}
 
-<div id="events" class="w-full px-4 sm:px-8 lg:px-24 py-20 sm:py-28 bg-gradient-to-b from-[#EFEFEF] via-[#3D5A80] to-[#EFEFEF] flex flex-col justify-start items-center gap-16">
+<div id="events" class="w-full px-4 sm:px-8 lg:px-24 py-24 sm:py-36 bg-Flash-White flex flex-col justify-start items-center gap-16">
 
     <div class="w-full max-w-3xl flex flex-col justify-start items-center gap-6 text-center">
-        <h2 class="text-gray-800 text-4xl sm:text-5xl font-bold font-['Roboto'] leading-tight">
+        <h2 class="text-gray-800 text-4xl sm:text-4xl font-bold font-['Roboto'] leading-tight">
             Connect Through Sports Events
         </h2>
         <p class="text-gray-600 text-lg font-normal font-['Roboto'] leading-relaxed">
@@ -14,7 +14,7 @@
     <div class="self-stretch grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-center items-start gap-8">
         
         {% for event in events_list %}
-        <div class="bg-white border border-[#000457] rounded-lg flex flex-col justify-start items-start overflow-hidden shadow-sm hover:shadow-xl hover:-translate-y-1 transition-all duration-300">
+        <div class="bg-white border border-[#000457]  flex flex-col justify-start items-start overflow-hidden shadow-sm hover:shadow-xl hover:-translate-y-1 transition-all duration-300">
             <div class="self-stretch h-64 relative flex flex-col justify-start items-start overflow-hidden group">
                 <img class="self-stretch h-full object-cover transition-transform duration-300 ease-in-out group-hover:scale-105" src="{{ event.thumbnail|default_if_none:'https://placehold.co/405x270' }}" alt="{{ event.name }}" loading="lazy">
                 <div class="absolute top-4 right-4">
@@ -49,14 +49,20 @@
             </div>
         </div>
         {% empty %}
-            <p class="col-span-full text-gray-700 text-center py-10">No events available at the moment. Check back soon!</p>
+        <div class="md:col-span-2 lg:col-span-3 text-center text-gray-500 py-16">
+            <h3 class="text-xl font-semibold">There is no Event yet.</h3>
+            <p class="mt-2">Ayo, jadi yang pertama membuat event di platform kami!</p>
+        </div>
         {% endfor %}
 
     </div>
 
+    {% if events_list %}
     <div class="flex flex-col justify-start items-start gap-4 mt-8">
         <a href="{% url 'event:show_event' %}" class="px-6 py-3 border border-gray-800 inline-flex justify-center items-center gap-2 text-gray-800 text-base font-normal hover:bg-gray-800 hover:text-white transition-colors duration-300">
             View all
         </a>
     </div>
+    {% endif %}
+
 </div>
