--- a/landing/templates/sections/features_preview.html
+++ b/landing/templates/sections/features_preview.html
@@ -33,7 +33,7 @@
                 <div class="flex flex-col justify-start items-center gap-6 flex-1">
                     
                     <svg class="w-12 h-12 text-[#EFEFEF]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.31h5.418c.47 0 .654.7.318.966l-4.28 3.087a.563.563 0 00-.186.518l1.63 5.165c.14.44-.36.791-.746.592L12 14.347l-4.75 3.326c-.387.2-.885-.151-.746-.592l1.63-5.165a.563.563 0 00-.186-.518l-4.28-3.087c-.335-.266-.152-.966.318-.966h5.418a.563.563 0 00.475-.31L11.48 3.5z" />
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" />
                     </svg>
 
                     <h3 class="text-gray-600 text-2xl font-bold font-['Roboto'] leading-loose">
@@ -50,7 +50,7 @@
                 <div class="flex flex-col justify-start items-center gap-6 flex-1">
                     
                     <svg class="w-12 h-12 text-[#EFEFEF]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 18.75h-9m9 0a3 3 0 013 3h-15a3 3 0 013-3m9 0v-3.375c0-.621-.504-1.125-1.125-1.125h-6.75c-.621 0-1.125.504-1.125 1.125V18.75m9 0h-9m9-3.375V6.375A2.625 2.625 0 0013.125 3.75h-2.25A2.625 2.625 0 008.25 6.375v8.25" />
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 6v.75m0 3v.75m0 3v.75m0 3V18m-9-5.25h5.25M7.5 15h3M3.375 5.25c-.621 0-1.125.504-1.125 1.125v3.026a2.999 2.999 0 010 5.198v3.026c0 .621.504 1.125 1.125 1.125h17.25c.621 0 1.125-.504 1.125-1.125v-3.026a2.999 2.999 0 010-5.198V6.375c0-.621-.504-1.125-1.125-1.125H3.375z" />
                     </svg>
 
                     <h3 class="text-gray-600 text-2xl font-bold font-['Roboto'] leading-loose">
